[tool.poetry]
name = "moon"
version = "0.1.0"
description = "A lightweight API for inspecting PostgreSQL Tables"
authors = ["Vinamr Grover <vinamrgrover@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
duckdb = "^0.9.2"
pandas = "^2.1.4"
rich = "^13.7.0"
pytest = "^7.4.3"
testcontainers = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
